--- a/index.html
+++ b/index.html
@@ -1,8 +1,32 @@
 <html>
-<head></head>
+<head>
+<style>
+body{
+  background-color: rgb(123,233,233);
+}
+
+h1{
+  font-size: 70px;
+  text-align: center;
+}
+
+</style>
+</head>
+
 <body>
-  <h1>my site</h1>
+<h1>
+Napoli
+</h1>
+
+<p>
+
+
+
+</p>
+
+
+
+
 </body>
 
-  
 </html>
