--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ Napoli
 <p>
 Napoli is an Italian football club based in Naples in the south of Italy. The club currently plays in Serie A and over the last 15 years and has seen a rise in success after the dark period experienced after Diego Maradona departed the club.There are many good football players that have left Napoli such as cavani,Maradona and more.There are also players that are still in the club like osimhen and  Kvaratskhelia.
 
-
+<a href="game.html">Snake</a>
 
 </p>
 <iframe width="400" height="247" src="https://www.youtube.com/embed/zfYa1UjZVGo?si=XvVa4lxfnYrH4ICO" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
