--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ Napoli
 </h1>
 
 <p>
-Napoli is an Italian football club based in Naples in the south of Italy. The club currently plays in Serie A and over the last 15 years and has seen<br>a rise in success after the dark period experienced after Diego Maradona departed the club.There are many good football players that have left Napoli such as cavani,Maradona and more.There are also players that are still in the club like osimhen and  Kvaratskhelia.
+Napoli SSC is a professional Italian football club based in Naples, Italy. Founded in 1926, the club plays in the Serie A, the top division of Italian football. Napoli has won two Serie A titles, five Coppa Italia titles, and one Supercoppa Italiana. The club is also one of the most successful teams in Europe, having won the UEFA Cup in 1989 and the UEFA Super Cup in 2014. The team is managed by Carlo Ancelotti and captained by Lorenzo Insigne. Napoli is known for its passionate and dedicated fans, and the team's home stadium, the San Paolo, is one of the most iconic in world football. Napoli is a great club with a long and proud history, and the team always looks to challenge for trophies each season.
 
 <a href="game.html">Snake</a>
 
