--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ Napoli
 <p>
 Napoli SSC is a professional Italian football club based in Naples, Italy. Founded in 1926, the club plays in the Serie A, the top division of Italian football. Napoli has won two Serie A titles, five Coppa Italia titles, and one Supercoppa Italiana. The club is also one of the most successful teams in Europe, having won the UEFA Cup in 1989 and the UEFA Super Cup in 2014. The team is managed by Carlo Ancelotti and captained by Lorenzo Insigne. Napoli is known for its passionate and dedicated fans, and the team's home stadium, the San Paolo, is one of the most iconic in world football. Napoli is a great club with a long and proud history, and the team always looks to challenge for trophies each season.
 
-<a href="game.html">Snake</a>
+<a href="game.html"><button>Snake</button></a>
 
 </p>
 <iframe width="400" height="247" src="https://www.youtube.com/embed/zfYa1UjZVGo?si=XvVa4lxfnYrH4ICO" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
