--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@ h1{
   text-align: center;
 }
 .button{
-  background-color:rgb(41,227,162)
-  ;
-  width:230px;
+  background-color:rgb(41,227,162);
+  width:170px;
 }
 </style>
 </head>
