--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@ button{
  cursor:pointer;
  border: 20px solid(41,227,162);
 }
+button:hover{
+  background-color:rgb(255, 55, 0);
+  color:white;
+}
 </style>
 </head>
 <body>
