--- a/index.html
+++ b/index.html
@@ -29,7 +29,33 @@ Napoli
 </h1>
 <a href="game.html"><button class=¨button¨>Snake</button></a>
 <p>
-Napoli SSC is a professional Italian football club based in Naples, Italy. Founded in 1926, the club plays in the Serie A, the top division of Italian football. Napoli has won two Serie A titles, five Coppa Italia titles, and one Supercoppa Italiana. The club is also one of the most successful teams in Europe, having won the UEFA Cup in 1989 and the UEFA Super Cup in 2014. The team is managed by Carlo Ancelotti and captained by Lorenzo Insigne. Napoli is known for its passionate and dedicated fans, and the team's home stadium, the San Paolo, is one of the most iconic in world football. Napoli is a great club with a long and proud history, and the team always looks to challenge for trophies each season.
+SSC Napoli, commonly referred to as Napoli, is an Italian professional football club based in the city of Naples that plays in Serie A
+1
+. The club has a long and rich history, dating back to 1904, and has been home to some of the most brilliant footballers ever, such as Diego Maradona
+2
+. Napoli has won numerous titles, including multiple Serie A championships and Coppa Italia trophies
+2
+. The team's home grounds have included Stadio Giorgio Ascarelli, Stadio Arturo Collana, and Stadio San Paolo, with the current stadium being Stadio Diego Armando Maradona
+2
+.
+Napoli is known for its strong fan base and the city's deep devotion to the team, with Diego Maradona being a central figure in the club's history
+4
+. Upon his passing in 2020, the Mayor of Naples declared, "Maradona è Napoli" (Maradona is Naples)
+4
+. The city's residents refer to Maradona as "Dios" (God) and even place him, in his sky-blue Società Sportiva Calcio (S.S.C.) Napoli jersey, among the city's centuries-old traditional handcrafted nativities
+4
+.Some of the most notable achievements in Napoli's history include:
+Winning the league title and cup in 1987, making history as the first southern Italian team to achieve such success
+3
+.
+Securing a second Serie A title in 1990
+3
+.
+Reaching the final of the UEFA Cup in 1989
+2
+.
+Overall, SSC Napoli is a highly successful football club with a rich history and a strong fan base, making it one of the most important clubs in Italian football.
+
 
 
 
