--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ Reaching the final of the UEFA Cup in 1989
 Overall, SSC Napoli is a highly successful football club with a rich history and a strong fan base, making it one of the most important clubs in Italian football.
 
 
-
+<a href=¨https://offline-dino-game.firebaseapp.com/¨>Dino game</a>
 
 </p>
 
