--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@ h1{
   font-size: 40px;
   text-align: center;
 }
+  p{
+    color:red;
+  }
+    
 button{
   font-size: 40px;
   background-color:rgb(3, 252, 152);
