--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@ h1{
   p{
     color:green;
   }
-    
+    img{
+  display:block;
+  margin-left:auto;
+  margin-right:auto;
+}
 button{
   font-size: 40px;
   background-color:rgb(3, 252, 152);
