--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@ Napoli
 </h1>
 <a href="game.html"><button class=¨button¨>Snake</button></a>
 <p>
+<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2d/SSC_Neapel.svg/512px-SSC_Neapel.svg.png?20210606154835" width="199
+">
 
 
 
